test/sh/error/func/assign_bad_type.sk
func() Int {
	return 1
}

x: Float = func()
